Create a FastAPI and API Question.

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ CHUNK_SIZE=1000
 # Characters overlap between chunks
 CHUNK_OVERLAP=200 
 CUDA_VISIBLE_DEVICES=1
+OLLAMA_EMBEDDING_MODEL=llama3.2
+OLLAMA_MODEL=llama3.2
+LANGCHAIN_TRACING_V2="false"
