Change model to qwen and remove the thinking phase of the model.

--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ CHUNK_SIZE=1000
 CHUNK_OVERLAP=200 
 CUDA_VISIBLE_DEVICES=1
 OLLAMA_EMBEDDING_MODEL=llama3.2
-OLLAMA_MODEL=llama3.2
+OLLAMA_MODEL=qwen3:8b
 LANGCHAIN_TRACING_V2="false"
