Add Gemini model

--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,16 @@ DOC_METADATA_PATH="vector_store/doc_metadata.pkl"
 
 # Processing Configuration
 #./sample_docs
-MARKDOWN_DIR=/home/leonardo/Remote/Rehagro/Anotacoes
+MARKDOWN_DIR=
 # Approximate characters per chunk
 CHUNK_SIZE=1000
 # Characters overlap between chunks
-CHUNK_OVERLAP=200 
+CHUNK_OVERLAP=200
 CUDA_VISIBLE_DEVICES=1
 OLLAMA_EMBEDDING_MODEL=llama3.2
 OLLAMA_MODEL=qwen3:8b
+
+GOOGLE_API_KEY=
+GEMINI_MODEL=gemini-2.0-flash
+
 LANGCHAIN_TRACING_V2="false"
